a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Haitong_Yang/invalid3.min
#variable redeclared
var x : int;
var x : string;
